Bug 1479678: Fix incorrect start offset when retrieving accessible text attributes if the last spelling error is not within this accessible. r=surkov

When dealing with an editor which contains multiple accessibles, the previous spelling error range might be in a previous accessible, not the accessible currently being queried.
In this case, DOMPointToOffset will return the length of this accessible.
Previously, we weren't checking for this and were overriding the start offset of the returned range regardless, resulting in broken offsets.
Now, we leave the start offset alone in this case.

Differential Revision: https://phabricator.services.mozilla.com/D3960